--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
             });
 
             $(".si").click(function() {
-                Swal.fire('Sabia que dirias que si 😉❤️');
+                Swal.fire({
+                    imageUrl: 'https://www.pngitem.com/pimgs/m/51-518541_corazn-volumen-sombra-fondo-transparente-amor-transparent-background.png',
+                    imageHeight: 150,
+                    imageAlt: 'corazon',
+                    text:'Sabia que dirias que si 😉❤️'
+                })
             });
         });
     </script>
