--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 
             $(".si").click(function() {
                 Swal.fire({
+                    text:'Sabia que dirias que si 😉❤️',
                     imageUrl: 'https://d.wattpad.com/story_parts/660145289/images/156b62404ee53ade887039047831.png',
-                    imageHeight: 220,
+                    imageWidth: 100,
+                    imageHeight: 200,
                     imageAlt: 'corazon',
-                    text:'Sabia que dirias que si 😉❤️'
                 })
             });
         });
