--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 
-<head>
+<head profile="Img/809423.jpg">
     <meta charset="UTF-8">
     <title>Un juego</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
